--- a/package.json
+++ b/package.json
@@ -8,8 +8,12 @@
     "dev": "nuxt dev"
   },
   "dependencies": {
+    "@iconify/vue": "^4.1.2",
     "nuxt": "^3.11.2",
     "vue": "^3.4.27",
     "vue-router": "^4.3.2"
+  },
+  "devDependencies": {
+    "sass": "^1.77.6"
   }
 }
